# marimo_anywhere

./: README.md  pyproject.toml
src/marimo_anywhere/: cli.py  web.py
src/marimo_link/: __init__.py  cli.py
