[project]
name = "marimo-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Engvall", email = "daniel.engvall@amelia.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.3.0",
    "python-minifier>=3.1.0",
]

[project.scripts]
marimo-link = "marimo_link.cli:cli_app"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
